--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- <meta charset="UTF-8"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <title>cv</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link rel="icon" href="accets/favicon.ico" > -->
+</head>
+<body>
+    <!-- <header class="header"></header> -->
+</body>
 </html>
