fix: add info in html file

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <!-- <meta charset="UTF-8"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>cv</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- <link rel="icon" href="accets/favicon.ico" > -->
 </head>
 <body>
+    <div class="cv">
+        <section>
+            <h1>Dzmitry Vaskou</h1>
+            <h2>Web developer</h2>
+
+            <div class="contacts">
+                <div class="contact">
+                    <div class="contact__type">
+                        Github
+                    </div>
+                    <div class="contact__value">
+                        <a href="https://github.com/DzmiVas/">github.com/DzmiVas</a>
+                    </div>
+                </div>
+                <div class="contact">
+                    <div class="contact__type">
+                        Email
+                    </div>
+                    <div class="contact__value">
+                        <a href="mailto:hobotdmitri@gmail.com">hobotdmitri@gmail.com</a>
+            </div>
+            <div class="description">
+              I have good interpersonal skills, I am very good at working in a team and I am learning something new with great desire and success.
+              I am a reliable person and you can rely on me in the team, I am always ready to help.
+            </div>
+        </section>
+    </div>
     <!-- <header class="header"></header> -->
 </body>
 </html>
