fix: add update to html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- <meta charset="UTF-8"> -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>cv</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="cv">
@@ -26,10 +27,42 @@
                     </div>
                     <div class="contact__value">
                         <a href="mailto:hobotdmitri@gmail.com">hobotdmitri@gmail.com</a>
+                    </div>
             </div>
             <div class="description">
-              I have good interpersonal skills, I am very good at working in a team and I am learning something new with great desire and success.
-              I am a reliable person and you can rely on me in the team, I am always ready to help.
+                I have good interpersonal skills, I am very good at working in a team and I am learning something new with great desire and success.
+I am a reliable person and you can rely on me in the team, I am always ready to help.
+            </div>
+        </section>
+
+        <section>
+            <h3>Experience</h3>
+
+            <div class="experience">
+                <div class="experience_date">
+                    24.06.2024 - 28.10.2024
+                </div>
+                <div class="experience_disription">
+                    <div class="experience_name">
+                        JS developer
+                    </div>
+                    <div class="experience_company">
+                        RSSchool
+                    </div>
+                    <div class="experience_details">
+                        <ul>
+                            <li>Create CV</li>
+                            <li>Work with Git</li>
+                            <li>Create html pages</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h3>Skills</h3>
+            <div>
+                HTML, CSS, JavaScript
             </div>
         </section>
     </div>
