feat: add logo of social webs & add style in html-file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <meta charset="UTF-8"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>cv</title>
-    <link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My CV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="cv">
+        <header>
+            <nav>
+                <a href="#" class="nav_link">Home</a>
+                <a href="#" class="nav_link">About Me</a>
+                <a href="#" class="nav_link">Experience</a>
+                <a href="#" class="nav_link">Skills</a>
+                <a href="#" class="nav_link">Contacts</a>
+            </nav>
+        </header>
+        <div class="promo">
+
+        </div>
         <section>
             <h1>Dzmitry Vaskou</h1>
             <h2>Web developer</h2>
@@ -66,6 +78,5 @@ I am a reliable person and you can rely on me in the team, I am always ready to 
             </div>
         </section>
     </div>
-    <!-- <header class="header"></header> -->
 </body>
 </html>
