feat: add footer and some change in style.css

--- a/index.html
+++ b/index.html
@@ -23,24 +23,6 @@
         <section>
             <h1>Dzmitry Vaskou</h1>
             <h2>Web developer</h2>
-
-            <div class="contacts">
-                <div class="contact">
-                    <div class="contact__type">
-                        Github
-                    </div>
-                    <div class="contact__value">
-                        <a href="https://github.com/DzmiVas/">github.com/DzmiVas</a>
-                    </div>
-                </div>
-                <div class="contact">
-                    <div class="contact__type">
-                        Email
-                    </div>
-                    <div class="contact__value">
-                        <a href="mailto:hobotdmitri@gmail.com">hobotdmitri@gmail.com</a>
-                    </div>
-            </div>
             <div class="description">
                 I have good interpersonal skills, I am very good at working in a team and I am learning something new with great desire and success.
 I am a reliable person and you can rely on me in the team, I am always ready to help.
@@ -75,6 +57,22 @@ I am a reliable person and you can rely on me in the team, I am always ready to 
             <h3>Skills</h3>
             <div>
                 HTML, CSS, JavaScript
+            </div>
+            <div class="footer-block-contact">
+                <ul class="footer-contacts">
+                    <li class="footer-contact">
+                        <a href="#" class="contact-phone"><img src="./assets/pictures/logo/logo phone.png" alt="Phone" class="phone-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="#" class="contact-telegram"><img src="./assets/pictures/logo/logo telegram.png" alt="Telegram" class="telegram-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="mailto:hobotdmitri@gmail.com" class="contact-email"><img src="./assets/pictures/logo/logo email.png" alt="Email" class="email-img"></a>
+                    </li>
+                    <li class="footer-contact">
+                        <a href="https://github.com/DzmiVas/" class="contact-Git"><img src="./assets/pictures/logo/logo github.png" alt="GitHub" class="github-img"></a>
+                    </li>
+                </ul>
             </div>
         </section>
     </div>
