--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     <div class="container-main">
         <section class="section" id="profile">
             <img src="/assets/pictures/avatar.jpg" width="256" height="256" alt="Dzmitry Vaskou" title="Dzmitry Vaskou">
-            <p><h2>Dzmitry Vaskou</h2></p>
+            <h2>Dzmitry Vaskou</h2>
             <br>
-            <p><h2>Web developer</h2></p>
+            <h2>Web developer</h2>
         </section>
         <section class="section" id="contacts">
             <p class="title-contacts"><h2>Contacts</h2></p>
-            <p class="github-contact"><h3><img src="./assets/pictures/logo/logo github.png" width="32" height="32" alt="GitHub" class="github-img"><a href="https://github.com/DzmiVas" class="github-link" title="DzmiVas"> Github.com/DzmiVas</a></h3></p>
-            <p class="email-contact"><h3><img src="./assets/pictures/logo/logo email.png" width="32" height="32" alt="Email" class="email-img"><a href="mailto:hobotdmitri@gmail.com" class="email-link" title="hobotdmitri@gmail.com"> Hobotdmitri@gmail.com</a></h3></p>
+            <p class="github-contact"><h3><img src="./assets/pictures/logo/logo_github.png" width="32" height="32" alt="GitHub" class="github-img"><a href="https://github.com/DzmiVas" class="github-link" title="DzmiVas"> Github.com/DzmiVas</a></h3></p>
+            <p class="email-contact"><h3><img src="./assets/pictures/logo/logo_email.png" width="32" height="32" alt="Email" class="email-img"><a href="mailto:hobotdmitri@gmail.com" class="email-link" title="hobotdmitri@gmail.com"> Hobotdmitri@gmail.com</a></h3>
+            </p>
         </section>
         <section class="section" id="about-me">
             <p class="title-about-me"><h2>About me</h2></p>
@@ -58,7 +59,9 @@
         </section>
         <section class="section" id="projects">
             <h2 class="title-projects">Projects</h2>
-            <p class="project-list"><a href="https://github.com/DzmiVas/rsschool-cv/" class="project-link" title="project on GitHub">Rsschool CV</p></a>
+            <p class="project-list">
+              <a href="https://github.com/DzmiVas/rsschool-cv/" class="project-link" title="project on GitHub">Rsschool CV</a>
+            </p>
         </section>
         <section class="section" id="education">
             <h2 class="title-education">Education</h2>
@@ -78,7 +81,7 @@
     <div class="footer-main">
         <div><a href="https://github.com/DzmiVas" class="github-link">DzmiVas</a></div>
         <p class="year">2024</p>
-        <a href="https://wearecommunity.io/events/js-fe-rs-2023q4" class="rsschool-link" title="RSschool-link-to-new-course"><img src="./assets/pictures/logo/logo rsschool.png" alt="RSschool" class="rsschool-img"></a>
+        <a href="https://wearecommunity.io/events/js-fe-rs-2023q4" class="rsschool-link" title="RSschool-link-to-new-course"><img src="./assets/pictures/logo/logo_rsschool.png" alt="RSschool" class="rsschool-img"></a>
     </div>
   </footer>
 </body>
