fix: fix some problems with walidator

--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
             <h2>Web developer</h2>
         </section>
         <section class="section" id="contacts">
-            <p class="title-contacts"><h2>Contacts</h2></p>
-            <p class="github-contact"><h3><img src="./assets/pictures/logo/logo_github.png" width="32" height="32" alt="GitHub" class="github-img"><a href="https://github.com/DzmiVas" class="github-link" title="DzmiVas"> Github.com/DzmiVas</a></h3></p>
-            <p class="email-contact"><h3><img src="./assets/pictures/logo/logo_email.png" width="32" height="32" alt="Email" class="email-img"><a href="mailto:hobotdmitri@gmail.com" class="email-link" title="hobotdmitri@gmail.com"> Hobotdmitri@gmail.com</a></h3>
-            </p>
+            <h2>Contacts</h2>
+            <h3><img src="./assets/pictures/logo/logo_github.png" width="32" height="32" alt="GitHub" class="github-img"><a href="https://github.com/DzmiVas" class="github-link" title="DzmiVas"> Github.com/DzmiVas</a></h3>
+            <h3><img src="./assets/pictures/logo/logo_email.png" width="32" height="32" alt="Email" class="email-img"><a href="mailto:hobotdmitri@gmail.com" class="email-link" title="hobotdmitri@gmail.com"> Hobotdmitri@gmail.com</a></h3>
         </section>
         <section class="section" id="about-me">
-            <p class="title-about-me"><h2>About me</h2></p>
+            <h2>About me</h2>
             <p class="about-me-description">
                 I have good interpersonal skills, I am very good at working in a team and I am learning something new with great desire and success. I am a reliable person and you can rely on me in the team, I am always ready to help.
             </p>
