fix: fix problems in coding

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="main">
     <div class="container-main">
         <section class="section" id="profile">
-            <img src="/assets/pictures/avatar.jpg" width="256" height="256" alt="Dzmitry Vaskou" title="Dzmitry Vaskou">
+            <img src="./assets/pictures/avatar.jpg" width="256" height="256" alt="Dzmitry Vaskou" title="Dzmitry Vaskou">
             <h2>Dzmitry Vaskou</h2>
             <br>
             <h2>Web developer</h2>
